<resources>
    <string name="app_name">Taara</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="account_information">ACCOUNT INFORMATION</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="taara_string_splash_screen_logo">Taara @string/splash_screen_logo</string>
    <string name="email">Email</string>
    <string name="cart">Cart</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="phone">Phone</string>
    <string name="sign_up">SIGN UP</string>
    <string name="google">Google</string>
    <string name="tuskys_moi_avenue">Tuskys Moi Avenue</string>
    <string name="store_string_profile_pic">store @string/profile_pic</string>
    <string name="check_in">CHECK IN</string>
    <string name="ok">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="invalid_login">Invalid log in details.Please try again</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out_button">Log Out button</string>
    <string name="not_registered_yet_sign_up_instead">Not registered yet? Sign Up instead</string>
    <string name="already_registerd_log_in_instead">Already Registerd? Log in instead</string>
    <string name="logo">Logo</string>
    <string name="unit_price_kshs_20">Unit price: kshs 20</string>
    <string name="vat_16">Vat: 16%</string>
    <string name="colgate_herbal_200ml">COLGATE HERBAL 200ML</string>
    <string name="remove">REMOVE</string>
    <string name="quantuty">quantity</string>
    <string name="todo">TODO</string>
    <string name="total">Total (kshs)</string>
    <string name="kshs_420">Kshs 420</string>
    <string name="checkout">Checkout</string>
    <string name="taara_credits">TAARA CREDITS</string>
    <string name="mpesa">MPESA</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="add_item">ADD ITEM</string>
    <string name="item_id">Item Id</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="_20">20</string>
    <string name="vat">VAT:</string>
    <string name="user_icon">user Icon</string>
    <string name="phone_no">Phone no</string>
    <string name="for_now_only_your_names_and_phone_can_be_dited_locally_the_rest_will_be_made_available_soon_kindly_bear_with_us">For now, only your names and phone can be edited locally.The rest will be made available soon. Kindly bear with us..</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_address_found">no addresses found</string>
    <string name="address_found">address found</string>
    <string name="go_on">GO ON ANYWAY</string>
    <string name="confirm_payment_of_kshs">Confirm Payment of kshs</string>
    <string name="_130000">130000</string>
    <string name="_16">16%</string>
    <string name="unit_price">Unit Price:</string>
    <string name="title_activity_account_information">AccountInformation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="compare_prices">Compare Prices</string>
    <string name="notifications">Notifications</string>
    <string name="prefrences">Prefrences</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="feedback">Help and Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="back">Back</string>
    <string name="back_icon">back icon</string>
    <string name="scan_instructions">Focus the camera on the qr code and wait for it to be automatically detected.</string>
    <string name="textview">TextView</string>
    <string name="description_description_description_description_description">description description description description description</string>
    <string name="kshs">Kshs</string>
    <string name="subtotal">SubTotal</string>
    <string name="kshs_34543">Kshs 34543</string>
    <string name="service_charge_label">Service Charge(0.5%)</string>
    <string name="kshs_34715_715">Kshs 34715.715</string>
    <string name="kshs_172_715">Kshs 172.715</string>
    <string name="confirm">CONFIRM</string>
    <string name="waiting">Waiting...</string>
    <string name="host">http://artscircle.co.ke</string>
    <string name="checkout_summary">SUMMARY</string>
    <string name="kshs_0_00">Kshs 0.00</string>
    <string name="change_if_not_correct">Change if not correct</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="payment">PAYMENT</string>
    <string name="update">UPDATE</string>
    <string name="upate_profile">Update Profile</string>
    <string name="version">Version 1.0.0</string>
    <string name="facebook_page">Follow us on Facebook</string>
    <string name="twitter_page">Follow us on Twitter</string>
    <string name="copyright">2018 , Taara  All Rights Reserved</string>
    <string name="fb_icon">Fb Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="talktous">TALK TO US</string>
    <string name="subject">SUBJECT</string>
    <string name="send">SEND</string>
    <string name="message">Your message here...</string>
    <string name="whatsapplink">Whatsapp Help Link</string>
    <string name="facebooklink">Facebook Help link</string>
    <string name="twitterlink">Twitter help Link</string>
    <string name="youtubeink">Youtube Channel Link</string>
    <string name="share_app">SHARE TAARA APP</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="recent_actvity">Recent Activity</string>
    <string name="your_actvity">Your Activity</string>
    <string name="compare_recent">COMPARE RECENT</string>
    <string name="all_history">ALL HISTORY</string>
    <string-array name="feedback_options">
        <item>General Feedback</item>
        <item>Help</item>
        <item>Enquiries</item>
    </string-array>
    <string name="title_activity_tab_sample">TabSample</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="dummy">Dummy string</string>
    <string name="delete">Delete</string>
    <string name="print">Print</string>
    <string name="delete_all">Delete All</string>
    <string name="paid">Paid: Kshs 200</string>
    <string name="estimated_savings">Save: Kshs</string>
    <string name="other_supermarkets">Other Supermarkets</string>

</resources>
