<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/compare_prices" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/alert_dark_frame"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/prefrences" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/log_out" />
    </group>

    <item android:title="App">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/exit" />
        </menu>
    </item>
    <item android:title="App">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
