<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/alert_dark_frame"
            android:title="@string/notifications" />

    </group>
    <item
        android:id="@+id/nav_feedback"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/feedback" />

    <item
        android:id="@+id/nav_about"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/about" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/log_out" />
    <item
        android:id="@+id/nav_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/exit" />

    <item android:title="">
        <menu>

        </menu>
    </item>
    <item android:title="">
        <menu>

        </menu>
    </item>

</menu>
