<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/delete"
        android:icon="@drawable/edit"
        app:showAsAction="always"
        android:id="@+id/deleteProduct"/>
    <item
        android:title="@string/print"
        android:icon="@drawable/edit"
        app:showAsAction="always"
        android:id="@+id/printItem"
        />
    <item
        android:title="@string/share"
        android:icon="@drawable/edit"
        app:showAsAction="always"
        android:id="@+id/share"/>
    <item
        android:title="@string/delete_all"
        android:icon="@drawable/edit"
        app:showAsAction="never"
        android:id="@+id/deleteAll"/>
</menu>