<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/startShoppingMenu"
        android:icon="@drawable/trolley"
        android:title="@string/start_shopping"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
