<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpAndFeedback">

    <android.support.v7.widget.Toolbar
        android:id="@+id/feedbackTooalbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/feedbackBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_icon"
            android:onClick="onClick"
            android:src="?attr/actionModeCloseDrawable"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/titleAboutt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:gravity="center"
            android:text="@string/talktous"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackTooalbar">


        <Spinner
            android:id="@+id/feedback_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            android:entries="@array/feedback_options" />

        <EditText
            android:id="@+id/feedback_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email"
            android:inputType="textAutoComplete|textEmailAddress" />

        <EditText
            android:id="@+id/feedback_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/subject"
            android:inputType="textAutoCorrect|textAutoComplete|textEmailSubject" />

        <EditText
            android:id="@+id/feedback_message"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/message"
            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textLongMessage" />

        <Button
            android:id="@+id/feedback_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:onClick="onClick"
            android:text="@string/send" />

        <View
            android:id="@+id/dividerfeedback"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook_feedback"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/facebooklink"
                android:onClick="onClick"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/twitter_feedback"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/twitterlink"
                android:onClick="onClick"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/youtube_feedback"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/youtubeink"
                android:onClick="onClick"
                android:src="@drawable/ic_youtube" />

            <ImageView
                android:id="@+id/whatsapp_feedback"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/whatsapplink"
                android:onClick="onClick"
                android:src="@drawable/ic_whatsapp" />


        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>