<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">


    <android.support.v7.widget.Toolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/aboutBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_icon"
            android:onClick="onClick"
            android:src="?attr/actionModeCloseDrawable"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/titleAboutt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/aboutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutToolbar">

        <ImageView
            android:id="@+id/logoAbout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/version" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/facebookLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/fbIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/fb_icon"
                android:onClick="onClick"
                app:srcCompat="@drawable/ic_facebook" />

            <TextView
                android:id="@+id/txtFacebook"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:onClick="onClick"
                android:text="@string/facebook_page"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/twitterLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/twitter_icon"
                android:onClick="onClick"
                app:srcCompat="@drawable/ic_twitter" />

            <TextView
                android:id="@+id/txtTwittr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:onClick="onClick"
                android:text="@string/twitter_page"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteY="406dp" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="84dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/copyright" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>