<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bicyclewide"
    tools:context=".SignUp"
    android:id="@+id/relativeLayout">

    <ImageView
        android:id="@+id/imgSignUpLogo"
        android:layout_width="193dp"
        android:layout_height="81dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/taara_string_splash_screen_logo"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transparent_white" />

    <EditText
        android:id="@+id/editFirstNameSignUp"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSecondNameSignUp"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintTop_toTopOf="@+id/editFirstNameSignUp"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmailSignUp"
        android:layout_width="318dp"
        android:layout_height="51dp"
        android:layout_marginTop="284dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPasswordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmailSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordSignUp"
        app:layout_constraintVertical_bias="0.139"
         />

    <TextView
        android:id="@+id/btnLogInInstad"
        android:layout_width="328dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="logInInstead"
        android:text="@string/already_registerd_log_in_instead"
        android:textColor="#98d2e8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.888"
        android:focusable="true" />


</android.support.constraint.ConstraintLayout>