<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmPaymentBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="40sp"
    android:paddingEnd="40sp"
    android:paddingTop="20sp"
    android:weightSum="2">

    <TextView
        android:id="@+id/ststicText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/confirm_payment_of_kshs"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/kshs"
            android:textSize="18sp"
            android:paddingEnd="5sp"/>

        <TextView
            android:id="@+id/txtShillings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/_130000"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>