<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/topLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_barcode_capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageView
            android:id="@+id/ic_tollbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_icon"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/toolBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/scan_instructions"
        android:textColor="@color/textDarkGrey"
        android:textSize="18sp" />

    <com.taara.android.taara.barcodereader.ui.camera.CameraSourcePreview
        android:layout_height="wrap_content"
        android:layout_gravity="center"
      android:id="@+id/preview"
      android:layout_width="match_parent"
        android:padding="10dp">

        <com.taara.android.taara.barcodereader.ui.camera.GraphicOverlay
            android:id="@+id/graphicOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

  </com.taara.android.taara.barcodereader.ui.camera.CameraSourcePreview>

</LinearLayout>
